--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="card-container">
     <div class="intro">
-      <img src="assets/images/avatar-jessica.jpeg" class="avatar">
+      <img src="assets/images/avatar-jessica.jpeg" alt="Jessica Randall" class="avatar">
       <p class="name">Jessica Randall</p>
       <p class="location">London, United Kingdom</p>
       <p class="slogan">"Front-end developer and avid reader."</p>
