--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Frontend Mentor | Social links profile</title>
 </head>
 <body>
+  <main>
   <div class="card-container">
     <div class="intro">
       <img src="assets/images/avatar-jessica.jpeg" alt="Jessica Randall" class="avatar">
@@ -27,5 +28,6 @@
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
     <p>Coded by <a href="#">Tony Baldessari</a>.</p>
   </div>
+</main>
 </body>
 </html>
