--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="card-container">
     <div class="intro">
       <img src="assets/images/avatar-jessica.jpeg" alt="Jessica Randall" class="avatar">
-      <p class="name">Jessica Randall</p>
+      <h1 class="name">Jessica Randall</h1>
       <p class="location">London, United Kingdom</p>
       <p class="slogan">"Front-end developer and avid reader."</p>
     </div>
